syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.robothouse.grpcauth.proto";
option java_outer_classname = "GrpcAuthProto";

import "google/protobuf/empty.proto";

service TokenService {
  rpc ValidateToken(google.protobuf.Empty) returns (ValidateTokenResponse);
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
}